Test uses Integer.valueOf instead